--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+  font-family: "Open-sans", sans-serif;
+  text-align: center;
+}
+
+#hero {
+  width: 592px;
+  margin: auto;
+}
+
 h1 {
   font-family: "inter", sans-serif;
   font-size: 49px;
@@ -9,14 +19,12 @@ h1 span {
   font-weight: bold;
 }
 
-body {
-  font-family: 'Open-sans', sans-serif;
-}
-
 span {
   color: #ff9900;
 }
 
 p {
   color: #7d7987;
+  font-size: 14px;
+  line-height: 28px;
 }
