--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body {
   font-family: "Open-sans", sans-serif;
   text-align: center;
+  margin: 0;
 }
 
 #hero {
   width: 592px;
-  margin: auto;
+  margin: 0 auto 72px;
+}
+
+#hero img {
+  margin-bottom: 72px;
 }
 
 h1 {
@@ -13,6 +18,7 @@ h1 {
   font-size: 49px;
   line-height: 56px;
   font-weight: normal;
+  margin-bottom: 32px;
 }
 
 h1 span {
@@ -29,6 +35,7 @@ p {
   line-height: 28px;
 }
 
-#footer a {
+#footer a + a {
   color: #ff9900;
+  margin-left: 28px;
 }
